# qtlib

./: .clang-format  .gitignore  CMakeLists.txt  TODO
demo/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
include/roler/: roler_global.h
include/roler/widgets/: autoclosemessagebox.h  lengthhintlineedit.h  paginationwidget.h  passwordlineedit.h  synccheckbox.h  tagwidget.h
src/widgets/: autoclosemessagebox.cpp  lengthhintlineedit.cpp  paginationwidget.cpp  passwordlineedit.cpp  passwordlineedit.h  synccheckbox.cpp  tagwidget.cpp  tagwidget.h
translation/: qt_zh_CN.ts
